@@ -13,10 +13,10 @@
 from .exception import ScreenshotError
 from .factory import mss
 
-__version__ = '2.0.20'
+__version__ = '2.0.21'
 __author__ = "Mickaël 'Tiger-222' Schoentgen"
 __copyright__ = '''
-    Copyright (c) 2013-2016, Mickaël 'Tiger-222' Schoentgen
+    Copyright (c) 2013-2017, Mickaël 'Tiger-222' Schoentgen
 
     Permission to use, copy, modify, and distribute this software and its
     documentation for any purpose and without fee or royalty is hereby
